# Avalanche-Simulation

./: .gitignore  CMakeLists.txt
FreeGLUT/lib/: freeglut.exp  freeglut.lib  freeglut_static.lib  freeglut_staticd.lib  freeglutd.exp  freeglutd.lib
GLFW/lib/: glfw3.lib
data/particle_configurations/: config_1.txt
src/: callback_struct.h  event_processing.h  fluid_engine.cpp  fluid_engine.h  grid.cpp  grid.h  kernel.h  main.cpp  mesh.cpp  mesh.h  mesh_sampler.cpp  mesh_sampler.h  particle.cpp  particle.h  program.cpp  program.h  sGrid.cpp  sGrid.h  scene.cpp  scene.h
src/shaders/: basic_shading.frag  basic_shading.vert
